samples/_failures_safe/1761422953_8f7e43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed68de1b.c: In function ‘main’:
./samples/SAFE/__tmp_ed68de1b.c:157:9: error: expected expression at end of input
  157 |         if (sscanf(input,
      |         ^~
./samples/SAFE/__tmp_ed68de1b.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed68de1b.c:157:9: error: expected declaration or statement at end of input
